--- a/index.html
+++ b/index.html
@@ -12,42 +12,31 @@
 </style>
 <script type="text/javascript" src="lib/three.js"></script>
 <script>
-	var scene, camera, renderer;
-var geometry, material, mesh;
 
-init();
-animate();
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth/window.innerHeight, 0.1, 1000 );
 
-function init() {
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize( window.innerWidth, window.innerHeight );
+        document.body.appendChild( renderer.domElement );
 
-    scene = new THREE.Scene();
+        var geometry = new THREE.BoxGeometry( 1, 1, 1 );
+        var material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
+        var cube = new THREE.Mesh( geometry, material );
+        scene.add( cube );
 
-    camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-    camera.position.z = 1000;
+        camera.position.z = 5;
 
-    geometry = new THREE.BoxGeometry( 200, 200, 200 );
-    material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
+        var animate = function () {
+            requestAnimationFrame( animate );
 
-    mesh = new THREE.Mesh( geometry, material );
-    scene.add( mesh );
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
 
-    renderer = new THREE.WebGLRenderer();
-    renderer.setSize( window.innerWidth, window.innerHeight );
+            renderer.render( scene, camera );
+        };
 
-    document.body.appendChild( renderer.domElement );
-
-}
-
-function animate() {
-
-    requestAnimationFrame( animate );
-
-    mesh.rotation.x += 0.01;
-    mesh.rotation.y += 0.02;
-
-    renderer.render( scene, camera );
-
-}
+        animate();
 </script>
 	
 </body>
